Log the number of loaded poems
Added a console log to display the number of loaded poems.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ if (localStorage.getItem('theme') === 'light') {
 }
 
 renderPoem();
+console.log('Poems loaded:', poems.length);
 </script>
 </body>
 </html>
